fixing image overflow

--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,7 @@
 
 .hero {
   height: 50vh;
-  width: 100vw;
+  width: 100%;
   position: relative;
   display: flex;
   justify-content: center;
